// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
    Lindsay McIntosh, Scottish Political Editor
  </div>
</div>
`;

exports[`2. with the author in the begining 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
    , Environment Editor
  </div>
</div>
`;

exports[`3. with the author at the end 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
    RBS Six Nations, 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Mike Atherton
  </div>
</div>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
     | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
     | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
    , 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
    , 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 fcjjas"
  >
     
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 fRmcJe"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`7. null with an empty ast 1`] = `null`;
